trying to fix user testing note bullet point align

--- a/style.css
+++ b/style.css
@@ -105,5 +105,6 @@ ul {
 
 li {
     font-size: 2rem;
+    align-content: left;
 }
 
